Jann 30/objects/GS1_AuthorProfile__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GS1_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS1 Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>IF(User__r.FirstName=&apos;&apos;,&apos;&apos;, User__r.FirstName + &apos; &apos;) +  User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SystemUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GS1 Author Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X1_Active_Profiles</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1 - Active Profiles</label>
    </listViews>
    <listViews>
        <fullName>X2_Inactive_Profiles</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>2 - Inactive Profiles</label>
    </listViews>
    <nameField>
        <displayFormat>AUT{00000}</displayFormat>
        <label>Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GS1 Author Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>